# Sonikoma

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  BUG_REPORT.md  Dockerfile  README.md  RULES.md  TODO.md  backend_migration_report.md  conftest.py  extract_logic.py  fix_app.py  fix_docstrings.py  fix_editor_imports.py  fix_hooks_imports.py  fix_layout_imports.py  fix_test.py  format_app.py  frontend_logs.txt  implementation_plan.md  inspect_namicomi.py  inspect_namicomi2.py  package-lock.json  package.json  patch_admin.py  patch_app.py  patch_header.py  patch_layout.py  patch_layout_again.py  patch_login.py  patch_login.sh  patch_page.py  patch_run_frontend.py  patch_sidebar.py  patch_vite_config.py  pnpm-lock.yaml  requirements.txt  requirements_utf8.txt  (+10 more)
backend_health_checker/: .gitignore  pyproject.toml  requirements.txt
backend_health_checker/backend_health_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend_health_checker/backend_health_checker/checkers/: __init__.py  architecture.py  base.py  compatibility.py  complexity.py  dead_code.py  docs_todos.py  duplicates.py  imports.py  packaging.py  security.py  syntax.py  tests_env.py  types_async.py
backend_health_checker/backend_health_checker/cli/: main.py
backend_health_checker/backend_health_checker/core/: __init__.py  engine.py
backend_health_checker/backend_health_checker/exporters/: sarif.py
backend_health_checker/backend_health_checker/integrations/: git.py
backend_health_checker/backend_health_checker/plugins/: manager.py
backend_health_checker/backend_health_checker/reporters/: base.py
backend_health_checker/backend_health_checker/scanners/: __init__.py  graph.py
health_checker/backend_health_checker/: README.md  pyproject.toml  requirements.txt
health_checker/backend_health_checker/backend_health_checker/: __init__.py
health_checker/backend_health_checker/backend_health_checker/cache/: sqlite_cache.py
health_checker/backend_health_checker/backend_health_checker/checkers/: __init__.py  circular_imports.py  complexity.py  duplicates.py  fastapi.py  imports.py  naming.py  packaging.py  security.py
health_checker/backend_health_checker/tests/: test_checkers.py  test_cli.py  test_engine.py
health_checker/health-checker-suite/: pyproject.toml
health_checker/health-checker-suite/docs/: architecture.md  coding_standards.md  dashboard.md  examples.md  faq.md  release_process.md  reporting.md  roadmap.md
health_checker/health-checker-suite/health_checker_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
health_checker/react_frontend_health_checker/: README.md  pyproject.toml  requirements.txt
health_checker/react_frontend_health_checker/react_frontend_health_checker.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
health_checker/react_frontend_health_checker/tests/: test_cli.py  test_file.js
(+1456 files in other folders)
