[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "react_frontend_health_checker"
version = "0.1.0"
description = "A production-quality standalone React Frontend Health Checker Suite."
authors = [
    {name = "Jules", email = "jules@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "rich>=13.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0"
]

[project.scripts]
frontend-health = "react_frontend_health_checker.cli.main:app"
